# mthread-mngr

./: .gitignore  CMakeLists.txt  README.md  temp.cpp
images/: mngr_struct.drawio  sim_struct.drawio
include/: CMakeLists.txt  pdev_message.h  pdev_message.hpp  sim_floor.h  sim_threads.hpp
src/: CMakeLists.txt  main.cpp  pdev_message.cpp  sim_floor.cpp
